Fixed partywall css to make text more readable

--- a/static/public/css/style.css
+++ b/static/public/css/style.css
@@ -200,7 +200,8 @@ img.party-poster {
   left: 4px;
   bottom: 4px;
   padding: 0.5em 20px;
-  background: rgba(255,255,255,0.4);
+  background: rgba(0,0,0,0.55); /* Text box background */
+  border-top-right-radius: 8px; /* Smooth edge in top right corner */
   text-decoration: none !important;
   color: #fff;
   opacity: 1;
